<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>socspioneer</name>
  <version>3.0.0</version>
  <description>SOCSPioneer package for ROS Humble with simulation support.</description>

  <license>TODO: License declaration</license>

  <author email="sxs1412@bham.ac.uk">Saif Sidhik</author>
  <author>Mark Rowan</author>

  <maintainer email="sxs1412@bham.ac.uk">Saif Sidhik</maintainer>
  <maintainer email="lxf656@bham.ac.uk">Laura Ferrante</maintainer>
  <maintainer email="yxw257@student.bham.ac.uk">Yanrong Wang</maintainer>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
